crates/ruff/src/rules/pycodestyle/snapshots/ruff__rules__pycodestyle__tests__W605_W605_2.py.snap
---
source: crates/ruff/src/rules/pycodestyle/mod.rs
---
W605_2.py:4:11: W605 [*] Invalid escape sequence: `\.`
  |
3 | #: W605:1:10
4 | regex = f'\.png$'
  |           ^^ W605
5 | 
6 | #: W605:2:1
  |
  = help: Add backslash to escape sequence

ℹ Fix
1 1 | # Same as `W605_0.py` but using f-strings instead.
2 2 | 
3 3 | #: W605:1:10
4   |-regex = f'\.png$'
  4 |+regex = rf'\.png$'
5 5 | 
6 6 | #: W605:2:1
7 7 | regex = f'''

W605_2.py:8:1: W605 [*] Invalid escape sequence: `\.`
  |
6 | #: W605:2:1
7 | regex = f'''
8 | \.png$
  | ^^ W605
9 | '''
  |
  = help: Add backslash to escape sequence

ℹ Fix
4 4 | regex = f'\.png$'
5 5 | 
6 6 | #: W605:2:1
7   |-regex = f'''
  7 |+regex = rf'''
8 8 | \.png$
9 9 | '''
10 10 | 

W605_2.py:13:7: W605 [*] Invalid escape sequence: `\_`
   |
11 | #: W605:2:6
12 | f(
13 |     f'\_'
   |       ^^ W605
14 | )
   |
   = help: Add backslash to escape sequence

ℹ Fix
10 10 | 
11 11 | #: W605:2:6
12 12 | f(
13    |-    f'\_'
   13 |+    rf'\_'
14 14 | )
15 15 | 
16 16 | #: W605:4:6

W605_2.py:20:6: W605 [*] Invalid escape sequence: `\_`
   |
18 | multi-line
19 | literal
20 | with \_ somewhere
   |      ^^ W605
21 | in the middle
22 | """
   |
   = help: Add backslash to escape sequence

ℹ Fix
14 14 | )
15 15 | 
16 16 | #: W605:4:6
17    |-f"""
   17 |+rf"""
18 18 | multi-line
19 19 | literal
20 20 | with \_ somewhere

W605_2.py:25:40: W605 [*] Invalid escape sequence: `\_`
   |
24 | #: W605:1:38
25 | value = f'new line\nand invalid escape \_ here'
   |                                        ^^ W605
   |
   = help: Add backslash to escape sequence

ℹ Fix
22 22 | """
23 23 | 
24 24 | #: W605:1:38
25    |-value = f'new line\nand invalid escape \_ here'
   25 |+value = f'new line\nand invalid escape \\_ here'
26 26 | 
27 27 | 
28 28 | #: Okay

W605_2.py:43:13: W605 [*] Invalid escape sequence: `\_`
   |
41 | '''  # noqa
42 | 
43 | regex = f'\\\_'
   |             ^^ W605
44 | value = f'\{{1}}'
45 | value = f'\{1}'
   |
   = help: Add backslash to escape sequence

ℹ Fix
40 40 | \w
41 41 | '''  # noqa
42 42 | 
43    |-regex = f'\\\_'
   43 |+regex = f'\\\\_'
44 44 | value = f'\{{1}}'
45 45 | value = f'\{1}'
46 46 | value = f'{1:\}'

W605_2.py:44:11: W605 [*] Invalid escape sequence: `\{`
   |
43 | regex = f'\\\_'
44 | value = f'\{{1}}'
   |           ^^ W605
45 | value = f'\{1}'
46 | value = f'{1:\}'
   |
   = help: Add backslash to escape sequence

ℹ Fix
41 41 | '''  # noqa
42 42 | 
43 43 | regex = f'\\\_'
44    |-value = f'\{{1}}'
   44 |+value = rf'\{{1}}'
45 45 | value = f'\{1}'
46 46 | value = f'{1:\}'
47 47 | 

W605_2.py:45:11: W605 [*] Invalid escape sequence: `\{`
   |
43 | regex = f'\\\_'
44 | value = f'\{{1}}'
45 | value = f'\{1}'
   |           ^^ W605
46 | value = f'{1:\}'
   |
   = help: Add backslash to escape sequence

ℹ Fix
42 42 | 
43 43 | regex = f'\\\_'
44 44 | value = f'\{{1}}'
45    |-value = f'\{1}'
   45 |+value = rf'\{1}'
46 46 | value = f'{1:\}'
47 47 | 
48 48 | # Okay

W605_2.py:46:14: W605 [*] Invalid escape sequence: `\}`
   |
44 | value = f'\{{1}}'
45 | value = f'\{1}'
46 | value = f'{1:\}'
   |              ^^ W605
47 | 
48 | # Okay
   |
   = help: Add backslash to escape sequence

ℹ Fix
43 43 | regex = f'\\\_'
44 44 | value = f'\{{1}}'
45 45 | value = f'\{1}'
46    |-value = f'{1:\}'
   46 |+value = rf'{1:\}'
47 47 | 
48 48 | # Okay
49 49 | value = rf'\{{1}}'


