crates/ruff/src/rules/pycodestyle/snapshots/ruff__rules__pycodestyle__tests__max_doc_length_with_utf_8.snap
---
source: crates/ruff/src/rules/pycodestyle/mod.rs
---
W505_utf_8.py:2:50: W505 Doc line too long (57 > 50 characters)
  |
2 | #!/usr/bin/env python3
3 | """Here's a top-level ß9💣2ℝing that's over theß9💣2ℝ."""
  |                                                    ^^^^^^ W505
  |

W505_utf_8.py:6:49: W505 Doc line too long (56 > 50 characters)
  |
6 | def f1():
7 |     """Here's a ß9💣2ℝing that's also over theß9💣2ℝ."""
  |                                                   ^^^^^^ W505
8 | 
9 |     x = 1  # Here's a comment that's over theß9💣2ℝ, but it's not standalone.
  |

W505_utf_8.py:10:51: W505 Doc line too long (56 > 50 characters)
   |
10 |     x = 1  # Here's a comment that's over theß9💣2ℝ, but it's not standalone.
11 | 
12 |     # Here's a standalone comment that's over theß9💣2ℝ.
   |                                                   ^^^^^^ W505
13 | 
14 |     x = 2
   |

W505_utf_8.py:13:51: W505 Doc line too long (93 > 50 characters)
   |
13 |     x = 2
14 |     # Another standalone that is preceded by a newline and indent toke and is over theß9💣2ℝ.
   |                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ W505
15 | 
16 |     print("Here's a string that's over theß9💣2ℝ, but it's not a ß9💣2ℝing.")
   |

W505_utf_8.py:18:50: W505 Doc line too long (61 > 50 characters)
   |
18 | "This is also considered a ß9💣2ℝing, and is over theß9💣2ℝ."
   |                                                   ^^^^^^^^^^^ W505
   |

W505_utf_8.py:24:50: W505 Doc line too long (82 > 50 characters)
   |
24 |     """Here's a multi-line ß9💣2ℝing.
25 | 
26 |     It's over theß9💣2ℝ on this line, which isn't the first line in the ß9💣2ℝing.
   |                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ W505
27 |     """
   |

W505_utf_8.py:31:50: W505 Doc line too long (85 > 50 characters)
   |
31 |     """Here's a multi-line ß9💣2ℝing.
32 | 
33 |     It's over theß9💣2ℝ on this line, which isn't the first line in the ß9💣2ℝing."""
   |                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ W505
   |


