crates/ruff/src/rules/pycodestyle/snapshots/ruff__rules__pycodestyle__tests__shebang.snap
---
source: crates/ruff/src/rules/pycodestyle/mod.rs
---
shebang.py:3:1: E265 Block comment should start with `# `
  |
3 | #!/usr/bin/python
4 | #
5 | #!
  | ^^ E265
6 | #:
  |


