crates/ruff/src/rules/pycodestyle/snapshots/ruff__rules__pycodestyle__tests__tab_size_1.snap
---
source: crates/ruff/src/rules/pycodestyle/mod.rs
---
E501_2.py:1:89: E501 Line too long (89 > 88 characters)
  |
1 | a = 5678901234567890123456789012345678901234567890123456789012345678901234567890123456789
  |                                                                                         ^ E501
2 | a   =   5678901234567890123456789012345678901234567890123456789012345678901234567890123456789
  |

E501_2.py:2:89: E501 Line too long (89 > 88 characters)
  |
2 | a = 5678901234567890123456789012345678901234567890123456789012345678901234567890123456789
3 | a   =   5678901234567890123456789012345678901234567890123456789012345678901234567890123456789
  |                                                                                             ^ E501
4 | 
5 | b = 5678901234567890123456789012345678901234567890123456789012345678901234567890123456789
  |

E501_2.py:4:89: E501 Line too long (89 > 88 characters)
  |
4 | a   =   5678901234567890123456789012345678901234567890123456789012345678901234567890123456789
5 | 
6 | b = 5678901234567890123456789012345678901234567890123456789012345678901234567890123456789
  |                                                                                         ^ E501
7 | b   =   5678901234567890123456789012345678901234567890123456789012345678901234567890123456789
  |

E501_2.py:5:89: E501 Line too long (89 > 88 characters)
  |
5 | b = 5678901234567890123456789012345678901234567890123456789012345678901234567890123456789
6 | b   =   5678901234567890123456789012345678901234567890123456789012345678901234567890123456789
  |                                                                                             ^ E501
7 | 
8 | c   =   901234567890123456789012345678901234567890123456789012345678901234567890123456789
  |

E501_2.py:7:89: E501 Line too long (89 > 88 characters)
   |
 7 | b   =   5678901234567890123456789012345678901234567890123456789012345678901234567890123456789
 8 | 
 9 | c   =   901234567890123456789012345678901234567890123456789012345678901234567890123456789
   |                                                                                         ^ E501
10 | c   =   901234567890123456789012345678901234567890123456789012345678901234567890123456789
   |

E501_2.py:10:89: E501 Line too long (89 > 88 characters)
   |
10 | c   =   901234567890123456789012345678901234567890123456789012345678901234567890123456789
11 | 
12 | d       =       7890123456789012345678901234567890123456789012345678901234567890123456789
   |                                                                                         ^ E501
13 | d   =   7890123456789012345678901234567890123456789012345678901234567890123456789
   |


