crates/ruff/src/rules/pycodestyle/snapshots/ruff__rules__pycodestyle__tests__task_tags_false.snap
---
source: crates/ruff/src/rules/pycodestyle/mod.rs
expression: diagnostics
---
- - kind:
      name: LineTooLong
      body: Line too long (149 > 88 characters)
      suggestion: ~
      fixable: false
    location:
      row: 1
      column: 88
    end_location:
      row: 1
      column: 149
    fix: ~
    parent: ~
  - kind:
      name: LineTooLong
      body: Line too long (148 > 88 characters)
      suggestion: ~
      fixable: false
    location:
      row: 2
      column: 88
    end_location:
      row: 2
      column: 148
    fix: ~
    parent: ~
  - kind:
      name: LineTooLong
      body: Line too long (155 > 88 characters)
      suggestion: ~
      fixable: false
    location:
      row: 3
      column: 88
    end_location:
      row: 3
      column: 155
    fix: ~
    parent: ~
  - kind:
      name: LineTooLong
      body: Line too long (150 > 88 characters)
      suggestion: ~
      fixable: false
    location:
      row: 4
      column: 88
    end_location:
      row: 4
      column: 150
    fix: ~
    parent: ~
  - kind:
      name: LineTooLong
      body: Line too long (149 > 88 characters)
      suggestion: ~
      fixable: false
    location:
      row: 5
      column: 88
    end_location:
      row: 5
      column: 149
    fix: ~
    parent: ~
  - kind:
      name: LineTooLong
      body: Line too long (156 > 88 characters)
      suggestion: ~
      fixable: false
    location:
      row: 6
      column: 88
    end_location:
      row: 6
      column: 156
    fix: ~
    parent: ~

