crates/ruff/src/rules/pycodestyle/snapshots/ruff__rules__pycodestyle__tests__w292_4.snap
---
source: crates/ruff/src/rules/pycodestyle/mod.rs
expression: diagnostics
---
- kind:
    name: NoNewLineAtEndOfFile
    body: No newline at end of file
    commit: Add trailing newline
    fixable: true
  location:
    row: 1
    column: 1
  end_location:
    row: 1
    column: 1
  fix:
    content: "<LineEnding>"
    location:
      row: 1
      column: 1
    end_location:
      row: 1
      column: 1
  parent: ~

